--- a/Table/index.html
+++ b/Table/index.html
@@ -9,6 +9,7 @@
       font-family: "Poppins", sans-serif;
       background: #f5f6fa;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
@@ -61,7 +62,7 @@
 <body>
 
   <h3>Please read the README.md file once.</h3>
-  
+
   <table>
     <thead>
       <tr>
