--- a/Havels-clone/index.html
+++ b/Havels-clone/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Havells Navbar - Sticky Responsive (No JS)</title>
+<title>Havells</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
