change in table file

--- a/Table/index.html
+++ b/Table/index.html
@@ -80,7 +80,17 @@
       <tr>
         <td>2</td>
         <td>Havels-Clone</td>
-        <td><a href="https://havels-clone.netlify.app/" target="_blank">Visit Profile</a></td>
+        <td><a href="https://havells-clone.netlify.app/" target="_blank">Visit Profile</a></td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Garnier-Clone video demo</td>
+        <td><a href="https://www.youtube.com/watch?v=lKmg01vsMqo" target="_blank">Visit Profile</a></td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Havels-Clone video demo</td>
+        <td><a href="https://www.youtube.com/watch?v=GHwvhlj0vG8" target="_blank">Visit Profile</a></td>
       </tr>
     </tbody>
   </table>
