--- a/Garnier-clone/Quiz.html
+++ b/Garnier-clone/Quiz.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Garnier Skin Care Quiz</title>
     <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
-
-    <nav class="navbar">
+<nav class="navbar">
   <div class="menu-icon">&#9776;</div>
   <div class="logo">
     <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1760999422/qrlogogarnier_zqkfry.webp" alt="Garnier Logo">
@@ -16,93 +15,88 @@
   <div class="search-icon">&#128269;</div>
 </nav>
 
-<div class="home"> <p><a href="./index.html">Home</a> > <b>Skin Care Quiz: Find Your Perfect Skin Care Routine</b> </p></div>
-
-<br><br>
+<div class="home">
+  <p><a href="./index.html">Home</a> > <b>Skin Care Quiz: Find Your Perfect Skin Care Routine</b></p>
+</div>
 
 <div class="container">
-    <div class="left">
-      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761192996/Screenshot_2025-10-23_094622_eewxwj.png" alt="Garnier Products">
-    </div>
-
-    <div class="right">
-      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761192290/ZEK8RkgQGOd2GWfz925g_Garnier_Logo_mrykqy.png" alt="Garnier Logo" class="logo">
-      <br><br><br><br><br><br><br><br>
-      <h2>FIND YOUR<br>SKINCARE REGIME</h2>
-      <br><br>
-      <button class="btn">GET STARTED</button> 
-      <br><br>
-      <p>Take this short quiz to discover the perfect routine for your skin needs</p>
-    </div>
-  </div>
-  <br>
-
-  <div class="logo-divider">
-    <div class="line"></div>
-    <div class="logo-circle">
-      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761114373/g-logo_nrcck4.webp" alt="Garnier Logo">
-    </div>
-    <div class="line"></div>
+  <div class="left">
+    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761192996/Screenshot_2025-10-23_094622_eewxwj.png" alt="Garnier Products">
   </div>
 
-  <footer class="footer">
-    <div class="footer-top">
-      <div class="footer-column">
-        <h4>WEBSITE LINKS</h4>
-        <ul>
-          <li><a href="#">About Our Brands</a></li>
-          <li><a href="#">Cookie Settings</a></li>
-          <li><a href="#">Hair Color Virtual Try On</a></li>
-          <li><a href="#">Sitemap</a></li>
-          <li><a href="#">Terms And Conditions</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Posting Guidelines</a></li>
-        </ul>
+  <div class="right">
+    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761192290/ZEK8RkgQGOd2GWfz925g_Garnier_Logo_mrykqy.png" alt="Garnier Logo" class="logo">
+    <h2>FIND YOUR<br>SKINCARE REGIME</h2>
+    <button class="btn">GET STARTED</button>
+    <p>Take this short quiz to discover the perfect routine for your skin needs</p>
+  </div>
+</div>
 
-        <select class="country-select">
-          <option>Country</option>
-          <option>India</option>
-          <option>USA</option>
-          <option>UK</option>
-        </select>
+<div class="logo-divider">
+  <div class="line"></div>
+  <div class="logo-circle">
+    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761114373/g-logo_nrcck4.webp" alt="Garnier Logo">
+  </div>
+  <div class="line"></div>
+</div>
 
-        <p class="footer-copy">©2018 Garnier LLC</p>
-      </div>
+<footer class="footer">
+  <div class="footer-top">
+    <div class="footer-column">
+      <h4>WEBSITE LINKS</h4>
+      <ul>
+        <li><a href="#">About Our Brands</a></li>
+        <li><a href="#">Cookie Settings</a></li>
+        <li><a href="#">Hair Color Virtual Try On</a></li>
+        <li><a href="#">Sitemap</a></li>
+        <li><a href="#">Terms And Conditions</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Posting Guidelines</a></li>
+      </ul>
 
-      <div class="footer-column border-left">
-        <h4>CUSTOMER SERVICE</h4>
-        <ul>
-          <li><a href="#">Contact Us</a></li>
-        </ul>
-      </div>
+      <select class="country-select">
+        <option>Country</option>
+        <option>India</option>
+        <option>USA</option>
+        <option>UK</option>
+      </select>
 
-      <div class="footer-column border-left">
-        <h4>FOLLOW GARNIER INDIA</h4>
-        <div class="social-icons">
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="Twitter"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="YouTube"></a>
-        </div>
-
-        <h4>FOLLOW GARNIER MEN</h4>
-        <div class="social-icons">
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="Twitter"></a>
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="YouTube"></a>
-        </div>
-      </div>
+      <p class="footer-copy">©2018 Garnier LLC</p>
     </div>
 
-    <div class="footer-bottom">
-      <p>
-        This site is intended for IN consumers. Cookies and related technology are used for advertising.
-        To learn more, visit <a href="#">AdChoices</a> and our <a href="#">privacy policy</a>.
-      </p>
+    <div class="footer-column border-left">
+      <h4>CUSTOMER SERVICE</h4>
+      <ul>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
     </div>
-  </footer>
 
+    <div class="footer-column border-left">
+      <h4>FOLLOW GARNIER INDIA</h4>
+      <div class="social-icons">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="Twitter"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="YouTube"></a>
+      </div>
+
+      <h4>FOLLOW GARNIER MEN</h4>
+      <div class="social-icons">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="Twitter"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733646.png" alt="YouTube"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>
+      This site is intended for IN consumers. Cookies and related technology are used for advertising.
+      To learn more, visit <a href="#">AdChoices</a> and our <a href="#">privacy policy</a>.
+    </p>
+  </div>
+</footer>
 
 </body>
 </html>
