--- a/Havels-clone/index.html
+++ b/Havels-clone/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Havells</title>
+<title>Havells - Responsive</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -77,7 +77,7 @@
   <a href="#">Register Product</a>
   <a href="#">Buy AMC</a>
   <a href="#">Loyalty</a>
-  <a href="#">GST Notice & Revised Price</a>
+  <a href="#">GST Notice</a>
 </div>
 
 <div class="slider1">
@@ -112,58 +112,48 @@
   </div>
 </div>
 
-
-
 <div class="txt"><h3>Discover Our Brands</h3></div>
 
 <div class="brands">
   <div class="brand-card1">
-    <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285258/Havells_Range_Web_Banner-01_k61jzc.webp" alt="Havells Logo" class="logo"></a>
+    <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285258/Havells_Range_Web_Banner-01_k61jzc.webp" alt="Havells"></a>
   </div>
-
   <div class="brand-card2">
-   <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285206/LLOYD-Range_for_mobile_600x600_px_rmccq7.webp" alt="Lloyd Logo" class="logo"></a>
+    <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285206/LLOYD-Range_for_mobile_600x600_px_rmccq7.webp" alt="Lloyd"></a>
   </div>
-
   <div class="brand-card3">
-   <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285190/600x300_AP_viahno.webp" alt="Lloyd Logo" class="logo"></a>
+    <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285190/600x300_AP_viahno.webp" alt="Brand 3"></a>
   </div>
-
   <div class="brand-card4">
-   <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285191/Crabtree-Desktop_3_aiuqxa.webp" alt="Lloyd Logo" class="logo"></a>
+    <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285191/Crabtree-Desktop_3_aiuqxa.webp" alt="Crabtree"></a>
   </div>
-
   <div class="brand-card5">
-   <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285210/REO_Range_Banner_600x300-01_2_1_nejxym.webp" alt="Lloyd Logo" class="logo"></a>
+    <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285210/REO_Range_Banner_600x300-01_2_1_nejxym.webp" alt="REO"></a>
   </div>
 </div>
-<br><br><br><br>
+
 <div class="txt2"><h3>This Weeks Highlights</h3></div>
 
 <div class="container">
   <div class="large-banner"></div>
-
   <div class="card geyser">
     <div class="card-content">
-      <h3>Velora+ Convertible Storage Water Heater (Geyser)</h3>
+      <h3>Velora+ Convertible Storage Water Heater</h3>
       <button>Shop Now</button>
     </div>
   </div>
-
   <div class="card air-purifier">
     <div class="card-content">
       <h3>Meditate AP 400 Air Purifier</h3>
       <button>Shop Now</button>
     </div>
   </div>
-
   <div class="card water-purifier">
     <div class="card-content">
       <h3>Havells RO+UV Water Purifier</h3>
       <button>Shop Now</button>
     </div>
   </div>
-
   <div class="card room-heater">
     <div class="card-content">
       <h3>Room Heater Collection</h3>
@@ -175,139 +165,139 @@
 <div class="txt2"><h3>Lloyd Product Highlights</h3></div>
 
 <div class="slider-container1">
-            <div class="slider">
-                <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285265/stunnair_base_21.03.2025_1_q6cfvp.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">Stunnair Split AC 1.5 - 5 Star</h5>
-                      <p class="card-description">- Stylish Sliding Fascia <br> - AI Modes (Find Me & Miss Me) <br> - I.N.D.R.I ( Individual Detection & Range Imaging)</p>
-                    </div>
-                </div>
+  <div class="slider">
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285265/stunnair_base_21.03.2025_1_q6cfvp.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">Stunnair Split AC 1.5 - 5 Star</h5>
+        <p class="card-description">- Stylish Sliding Fascia <br> - AI Modes (Find Me & Miss Me) <br> - I.N.D.R.I Detection</p>
+      </div>
+    </div>
 
-                <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285244/gls12v5fogsy_base_1__1_2__nsfdco.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">Stellar Art Split AC 1.5 - 5 Star</h5>
-                      <p class="card-description">- Mood On (Mood-Lighting) <br> - Mood On (Mood-Lighting in Standby Mode)  <br> - Ambi-Lighting (Temperature Based)</p>
-                    </div>
-                </div>
-               
-                <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285264/pastel_green_base_1_ppzewt.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">195 L Direct Cool Refrigerator 5 Star Pastel Green</h5>
-                      <p class="card-description">- Auto Defrost <br> - Inverter Compressor <br> - Rapid Freeze Technology</p>
-                    </div>
-                </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285244/gls12v5fogsy_base_1__1_2__nsfdco.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">Stellar Art Split AC 1.5 - 5 Star</h5>
+        <p class="card-description">- Mood On (Mood-Lighting) <br> - Standby Mode Lighting <br> - Temperature Based Ambi-Lighting</p>
+      </div>
+    </div>
 
-                <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285199/grace_rifacx.webp" alt="" class="card-img">
-                   <div class="card-content1">
-                        <h5 class="card-title">Stellar Grace Split AC 1.5 - 5 Star</h5>
-                      <p class="card-description">- Mood On (Mood-Lighting) <br> - Mood On (Mood-Lighting in Standby Mode)  <br> - Ambi-Lighting (Temperature Based)</p>
-                    </div>
-                </div>
- 
-                <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285199/gls18h5fwkgt_base_2__1_edwzzb.webp" alt="" class="card-img">
-                     <div class="card-content1">
-                        <h5 class="card-title">Stellar Duo Split AC 1.5 - 5 Star</h5>
-                      <p class="card-description">- Mood On (Mood-Lighting) <br> - Ambi-Lighting (Temperature Based) <br> - Ambi-Lighting (Air Quality Based)</p>
-                    </div>
-                </div>
-                
-                <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285265/pastel_yellow_control_panel_base_1_o1s6kw.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">195 L Direct Cool Refrigerator 5 Star Pastel Yellow</h5>
-                      <p class="card-description">- Auto Defrost <br> - Inverter Compressor <br> - Rapid Freeze Technology</p>
-                    </div>
-                </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285264/pastel_green_base_1_ppzewt.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">195 L Direct Cool Refrigerator 5 Star Pastel Green</h5>
+        <p class="card-description">- Auto Defrost <br> - Inverter Compressor <br> - Rapid Freeze Technology</p>
+      </div>
+    </div>
 
-                 <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285244/gldc262gtbt2jc_1_rymgww.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">230 L Direct Cool Refrigerator 2 Star Tropicana Blue</h5>
-                      <p class="card-description">- Honeycomb Crisper <br> - Fleximax Design <br> - Quick Chilling  Zone</p>
-                    </div>
-                </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285199/grace_rifacx.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">Stellar Grace Split AC 1.5 - 5 Star</h5>
+        <p class="card-description">- Mood On (Mood-Lighting) <br> - Standby Mode Lighting <br> - Temperature Based Ambi-Lighting</p>
+      </div>
+    </div>
 
-                 <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/red_gvynqv.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">230 L Direct Cool Refrigerator 2 Star Tropicana Wine</h5>
-                      <p class="card-description">- Honeycomb Crisper <br> - Fleximax Design <br> - Quick Chilling  Zone</p>
-                    </div>
-                </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285199/gls18h5fwkgt_base_2__1_edwzzb.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">Stellar Duo Split AC 1.5 - 5 Star</h5>
+        <p class="card-description">- Mood On (Mood-Lighting) <br> - Temperature Based Ambi-Lighting <br> - Air Quality Based Lighting</p>
+      </div>
+    </div>
 
-                 <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/gldf205slat2lc_5__1_muu1ok.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">188 L Direct Cool Refrigerator 3 Star Lilly Aqua</h5>
-                      <p class="card-description">- Inverter Compressor <br> - Home Inverter Connect <br> - Rapid Freeze Technology</p>
-                    </div>
-                </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285265/pastel_yellow_control_panel_base_1_o1s6kw.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">195 L Direct Cool Refrigerator 5 Star Pastel Yellow</h5>
+        <p class="card-description">- Auto Defrost <br> - Inverter Compressor <br> - Rapid Freeze Technology</p>
+      </div>
+    </div>
 
-                 <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/stylus_wood_base_1_hsdmn4.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">Stylus Split AC 1.5 - 5 Star</h5>
-                      <p class="card-description">- 6 in 1 Convertible (40 / 60 / 80 /100 / 110 / Auto) <br> - Smart 4-Way Swing <br> - Turbo Cool</p>
-                    </div>
-                </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285244/gldc262gtbt2jc_1_rymgww.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">230 L Direct Cool Refrigerator 2 Star Tropicana Blue</h5>
+        <p class="card-description">- Honeycomb Crisper <br> - Fleximax Design <br> - Quick Chilling Zone</p>
+      </div>
+    </div>
 
-                 <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/stylus_marble_base_dyi6di.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">Stylus Split AC 1.5 - 5 Star</h5>
-                      <p class="card-description">- 6 in 1 Convertible (40 / 60 / 80 /100 / 110 / Auto) <br> - Smart 4-Way Swing <br> - Turbo Cool</p>
-                    </div>
-                </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/red_gvynqv.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">230 L Direct Cool Refrigerator 2 Star Tropicana Wine</h5>
+        <p class="card-description">- Honeycomb Crisper <br> - Fleximax Design <br> - Quick Chilling Zone</p>
+      </div>
+    </div>
 
-                 <div class="card1">
-                    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/glwt855n12ss_1_nfjcmz.webp" alt="" class="card-img">
-                    <div class="card-content1">
-                        <h5 class="card-title">Fully Automatic Top Load Novante IOT 8.5 kg</h5>
-                      <p class="card-description">- 5 Star Rating <br> - IOT with Wash Genie Assist <br> - 5D Wash - Dynamic Waterfall, Dual Flow Lint Filter, Double Jet Spray, Hexamax Drum, Dual Power Pulsator</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/gldf205slat2lc_5__1_muu1ok.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">188 L Direct Cool Refrigerator 3 Star Lilly Aqua</h5>
+        <p class="card-description">- Inverter Compressor <br> - Home Inverter Connect <br> - Rapid Freeze Technology</p>
+      </div>
+    </div>
 
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/stylus_wood_base_1_hsdmn4.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">Stylus Split AC 1.5 - 5 Star</h5>
+        <p class="card-description">- 6 in 1 Convertible <br> - Smart 4-Way Swing <br> - Turbo Cool</p>
+      </div>
+    </div>
 
-    <div class="txt2"><h3>Offers</h3></div>
-<br>
-    <div class="slider2">
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/stylus_marble_base_dyi6di.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">Stylus Split AC 1.5 - 5 Star</h5>
+        <p class="card-description">- 6 in 1 Convertible <br> - Smart 4-Way Swing <br> - Turbo Cool</p>
+      </div>
+    </div>
+
+    <div class="card1">
+      <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761305193/glwt855n12ss_1_nfjcmz.webp" alt="" class="card-img">
+      <div class="card-content1">
+        <h5 class="card-title">Fully Automatic Top Load Novante IOT 8.5 kg</h5>
+        <p class="card-description">- 5 Star Rating <br> - IOT with Wash Genie Assist <br> - 5D Wash Technology</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="txt2"><h3>Offers</h3></div>
+
+<div class="slider2">
   <div class="slides1">
     <div class="slide01">
-      <a href="./offer1.html"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285192/diwali-durga-puja-RD-desktop_fi7vct.webp" alt=""></a>
+      <a href="offer1.html"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285192/diwali-durga-puja-RD-desktop_fi7vct.webp" alt=""></a>
     </div>
     <div class="slide02">
-      <a href="./offer2.html"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285200/HAL_offer_home_page_desktop_pyyddv.webp" alt=""></a>
+      <a href="offer2.html"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285200/HAL_offer_home_page_desktop_pyyddv.webp" alt=""></a>
     </div>
   </div>
 </div>
-<br><br><br><br>
-<div class="bigbox">
 
+<div class="bigbox">
   <div class="box1">
-   <div class="box0.1"><h2>Havells Virtual Tour</h2></div><br>
+    <div class="box0.1"><h2>Havells Virtual Tour</h2></div>
     <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285206/Promotion-Block_rjbyzu.webp" alt="Havells Virtual Tour"> 
-    <div class="box-content"><h3>Explore the Havells Experience Zone through our virtual tour</h3>
+    <div class="box-content">
+      <h3>Explore the Havells Experience Zone through our virtual tour</h3>
       <p>Dive-in to the virtual world of appliances from the comfort of your home with our Experience Zone.</p>
-      <a href="#" class="btn1">Visit Now</a></div>
+      <a href="#" class="btn1">Visit Now</a>
+    </div>
   </div>
 
   <div class="box1">
-   <div class="box0.1"><h2>AMC/Extended Warranty</h2></div><br>
-    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285191/AMC-warranty_a4nvtt.webp" alt="Havells Virtual Tour"> 
-    <div class="box-content"><h3>Havells Extended Warranty, A worry-free total maintenance service</h3>
+    <div class="box0.1"><h2>AMC/Extended Warranty</h2></div>
+    <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285191/AMC-warranty_a4nvtt.webp" alt="Warranty"> 
+    <div class="box-content">
+      <h3>Havells Extended Warranty, A worry-free total maintenance service</h3>
       <p>To avail extended warranty schemes, register your product through "Havells One App".</p>
-      <a href="./warranty.html" class="btn1">Learn More</a></div>
+      <a href="warranty.html" class="btn1">Learn More</a>
+    </div>
   </div>
 </div>
-
-<br><br><br><br>
 
 <footer>
   <div class="footer-container">
@@ -423,9 +413,6 @@
     <a href="#">Sitemap</a>
   </div>
 </footer>
-
-
-
 
 </body>
 </html>
