--- a/Havels-clone/offer2.html
+++ b/Havels-clone/offer2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-     <header class="navbar">
+<header class="navbar">
   <div class="logo">
     <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285696/Screenshot_2025-10-24_113055_velce4.png" alt="Havells Logo">
     HAVELLS
@@ -77,41 +77,43 @@
   <a href="#">Register Product</a>
   <a href="#">Buy AMC</a>
   <a href="#">Loyalty</a>
-  <a href="#">GST Notice & Revised Price</a>
+  <a href="#">GST Notice</a>
 </div>
 
-<div class="home"> <p><a href="./index.html">Home</a>   >  Havells Har Ghar Tyohaar </p></div>
+<div class="home">
+  <p><a href="index.html">Home</a> > Havells Har Ghar Tyohaar</p>
+</div>
 
 <div class="slider2">
-  <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285200/HAL_offer_home_page_desktop_pyyddv.webp" alt=""></a>
+  <a href="#"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285200/HAL_offer_home_page_desktop_pyyddv.webp" alt="Har Ghar Tyohaar Banner"></a>
 </div>
 
- <section class="offer-section">
-    <h2>Har Ghar Tyohar Offer</h2>
-    <h3>T&amp;C for Home Art Lights Consumer Offer</h3>
-    <h4>(15th Sep'25 to 31st Oct'25)</h4>
+<section class="offer-section">
+  <h2>Har Ghar Tyohar Offer</h2>
+  <h3>T&amp;C for Home Art Lights Consumer Offer</h3>
+  <h4>(15th Sep'25 to 31st Oct'25)</h4>
 
-    <ul>
-      <li><strong>Cash Back &amp; Scratch Card offer valid only in India, excluding Tamil Nadu</strong></li>
-      <li>One-time use per unique code for cash back offer</li>
-      <li>One participation per mobile number for cash back offer</li>
-      <li>Offer not applicable to customer GST billing</li>
-      <li>Applicable on all Lighting products</li>
-      <li>Consumer offer to be applied on only one slab per consumer</li>
-      <li>No warranty and guarantee on the gifts</li>
-      <li><strong>Consumer offer &amp; billing is applicable at Home Art Light exclusive store only</strong></li>
-      <li>Participation / eligibility for gifts/lucky draw is completely free and optional</li>
-      <li>Havells reserves the right to alter/change terms and/or short close offer without any prior notice</li>
-      <li><strong>The said offer/program is not valid on online / e commerce platforms.</strong></li>
-    </ul>
+  <ul>
+    <li><strong>Cash Back &amp; Scratch Card offer valid only in India, excluding Tamil Nadu</strong></li>
+    <li>One-time use per unique code for cash back offer</li>
+    <li>One participation per mobile number for cash back offer</li>
+    <li>Offer not applicable to customer GST billing</li>
+    <li>Applicable on all Lighting products</li>
+    <li>Consumer offer to be applied on only one slab per consumer</li>
+    <li>No warranty and guarantee on the gifts</li>
+    <li><strong>Consumer offer &amp; billing is applicable at Home Art Light exclusive store only</strong></li>
+    <li>Participation / eligibility for gifts/lucky draw is completely free and optional</li>
+    <li>Havells reserves the right to alter/change terms and/or short close offer without any prior notice</li>
+    <li><strong>The said offer/program is not valid on online / e commerce platforms.</strong></li>
+  </ul>
 
-    <p class="note">
-      Note : <a href="#">All trademarks used herein are property of their respective owner.</a>
-      Any use of third party trademarks is for identification purposes only and does not imply any endorsement.
-    </p>
-  </section>
+  <p class="note">
+    Note : <a href="#">All trademarks used herein are property of their respective owner.</a>
+    Any use of third party trademarks is for identification purposes only and does not imply any endorsement.
+  </p>
+</section>
 
-  <footer>
+<footer>
   <div class="footer-container">
     <div class="footer-column">
       <h4>For Consumer</h4>
