--- a/Havels-clone/warranty.html
+++ b/Havels-clone/warranty.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ACM / Extended Warranty</title>
-  <link rel="stylesheet" href="warranty.css">
+  <title>AMC / Extended Warranty</title>
+ <link rel="stylesheet" href="warranty.css">
 </head>
 <body>
   
-  <header class="navbar">
+<header class="navbar">
   <div class="logo">
     <img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761285696/Screenshot_2025-10-24_113055_velce4.png" alt="Havells Logo">
     HAVELLS
@@ -77,53 +77,53 @@
   <a href="#">Register Product</a>
   <a href="#">Buy AMC</a>
   <a href="#">Loyalty</a>
-  <a href="#">GST Notice & Revised Price</a>
+  <a href="#">GST Notice</a>
 </div>
 
-<div class="home"> <p> <a href="./index.html">Home</a>   >   ACM / Extended Warranty </p></div>
+<div class="home">
+  <p><a href="index.html">Home</a> > AMC / Extended Warranty</p>
+</div>
 
 <div class="slider1">
   <div class="slides">
     <div class="slide1">
-      <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386434/1900_x_690_amc_mop34c.webp" alt=""></a>
+      <a href="#"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386434/1900_x_690_amc_mop34c.webp" alt="AMC Banner 1"></a>
     </div>
     <div class="slide2">
-      <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386433/1920x_690_REF_AMC_Banner_1_znhwt7.webp" alt=""></a>
+      <a href="#"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386433/1920x_690_REF_AMC_Banner_1_znhwt7.webp" alt="AMC Banner 2"></a>
     </div>
     <div class="slide3">
-      <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386433/AMC-1_1_syc8ia.webp" alt=""></a>
+      <a href="#"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386433/AMC-1_1_syc8ia.webp" alt="AMC Banner 3"></a>
     </div>
     <div class="slide4">
-      <a href=""><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386435/1920_x_690_WM_AMC_banner_1_s85ugj.webp" alt=""></a>
+      <a href="#"><img src="https://res.cloudinary.com/dkiez6yqc/image/upload/v1761386435/1920_x_690_WM_AMC_banner_1_s85ugj.webp" alt="AMC Banner 4"></a>
     </div>
   </div>
 </div>
-<br>
 
 <section class="amc-section">
-    <div class="amc-box">
-      <h3>AMC Highlights</h3>
-      <p>AMC is an exclusive program that protects your product and ensures complete peace of mind.</p>
-    </div>
+  <div class="amc-box">
+    <h3>AMC Highlights</h3>
+    <p>AMC is an exclusive program that protects your product and ensures complete peace of mind.</p>
+  </div>
 
-    <div class="amc-box">
-      <h3>Applicable Products</h3>
-      <p>AMC is available for Water Purifiers, Fans, Air Conditioners, Washing Machines and Refrigerators.</p>
-    </div>
+  <div class="amc-box">
+    <h3>Applicable Products</h3>
+    <p>AMC is available for Water Purifiers, Fans, Air Conditioners, Washing Machines and Refrigerators.</p>
+  </div>
 
-    <div class="amc-box">
-      <h3>Key Benefits</h3>
-      <p>Saves from unexpected high repair cost, Regular service through qualified technicians optimise the life of product.</p>
-    </div>
-  </section>
+  <div class="amc-box">
+    <h3>Key Benefits</h3>
+    <p>Saves from unexpected high repair cost. Regular service through qualified technicians optimise the life of product.</p>
+  </div>
+</section>
 
-  
-  <section class="login-section">
-    <h2>Login to Buy Havells AMC / EW Plans starting at Rs 150/-</h2>
-    <a href="#" class="login-btn">Login To Buy</a>
-  </section>
+<section class="login-section">
+  <h2>Login to Buy Havells AMC / EW Plans starting at Rs 150/-</h2>
+  <a href="#" class="login-btn">Login To Buy</a>
+</section>
 
-  <footer>
+<footer>
   <div class="footer-container">
     <div class="footer-column">
       <h4>For Consumer</h4>
