--- a/Table/index.html
+++ b/Table/index.html
@@ -68,7 +68,8 @@
       <tr>
         <th>S. No.</th>
         <th>Name</th>
-        <th>Link</th>
+        <th>Website-clone Link</th>
+        <th>Video Link</th>
       </tr>
     </thead>
     <tbody>
@@ -76,22 +77,33 @@
         <td>1</td>
         <td>Garnier-Clone</td>
         <td><a href="https://garnier-clone.netlify.app/" target="_blank">Visit Website</a></td>
+        <td><a href="https://www.youtube.com/watch?v=lKmg01vsMqo" target="_blank">Open Video</a></td>
       </tr>
       <tr>
         <td>2</td>
         <td>Havels-Clone</td>
         <td><a href="https://havells-clone.netlify.app/" target="_blank">Visit Website</a></td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Garnier-Clone video demo</td>
-        <td><a href="https://www.youtube.com/watch?v=lKmg01vsMqo" target="_blank">Open Video</a></td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Havels-Clone video demo</td>
         <td><a href="https://www.youtube.com/watch?v=GHwvhlj0vG8" target="_blank">Open Video</a></td>
       </tr>
+      <tr>
+        <td>3</td>
+        <td>UrbanCompany Clone</td>
+        <td><a href="https://urbancompany-clone.netlify.app/">Visit Website</a></td>
+        <td><a href="https://youtu.be/S0e2Reb0CqE" target="_blank">Open Video</a></td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Postman Clone</td>
+        <td><a href="https://postma-api-clone.netlify.app/">Visit Website</a></td>
+        <td><a href="" target="_blank"></a></td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Dream Game Clone</td>
+        <td><a href="https://dreamgame-clone.netlify.app/">Visit Website</a></td>
+        <td><a href="" target="_blank"></a></td>
+      </tr>
+      
     </tbody>
   </table>
 
