--- a/Table/index.html
+++ b/Table/index.html
@@ -103,6 +103,12 @@
         <td><a href="https://dreamgame-clone.netlify.app/">Visit Website</a></td>
         <td><a href="" target="_blank"></a></td>
       </tr>
+      <tr>
+        <td>6</td>
+        <td>Zerodha Clone</td>
+        <td><a href="https://zerodha-n.netlify.app/">Visit Website</a></td>
+        <td><a href="" target="_blank"></a></td>
+      </tr>
       
     </tbody>
   </table>
